--- a/gradle.properties
+++ b/gradle.properties
@@ -2,14 +2,14 @@ java_version = 1.8
 
 //minecraft
 snapshot = 2.3
-mc_mapping = snapshot_20170624
+mc_mapping = stable_39
 mc_version = 1.12.2
-forge_version = 14.23.5.2768
+forge_version = 14.23.5.2847
 
 //mod and library
-lib_version = 6.4.17
+lib_version = 6.5.2.2
 mod_version = 0.1.9
 
 //mod dependencies
-oc_version = 1.7.0.19
-jei_version = 4.8.0.108
+oc_version = 1.7.5.192
+jei_version = 4.16.1.302
