--- a/build.gradle
+++ b/build.gradle
@@ -84,11 +84,7 @@ repositories {
 		url = "http://maven.cil.li/"
 	}
 	maven {
-		url = "https://maven.pkg.github.com/cd4017be/cd4017be_lib"
-		credentials {
-			username = project.findProperty("gpr.user") ?: System.getenv("USERNAME")
-			password = project.findProperty("gpr.key") ?: System.getenv("PASSWORD")
-		}
+		url = "libs"
 	}
 }
 
@@ -97,7 +93,7 @@ dependencies {
 	deobfProvided "mezz.jei:jei_${mc_version}:${jei_version}:api"
 	runtime "mezz.jei:jei_${mc_version}:${jei_version}"
 	//TODO replace 1.12.1 for OC with actual mc version
-	compile "li.cil.oc:OpenComputers:MC1.12.1-${oc_version}:api"
+	compile "li.cil.oc:OpenComputers:MC1.12.2-${oc_version}:api"
 	// CD4017BE_lib
 	compile "com.cd4017be.lib:CD4017BE_lib:${mc_version}-${lib_version}:deobf"
 }
@@ -131,14 +127,7 @@ jar {
 
 publishing {
     repositories {
-        maven {
-            name = "GitHubPackages"
-            url = uri("https://maven.pkg.github.com/cd4017be/verticallystackeddimensions")
-            credentials {
-                username = project.findProperty("gpr.user") ?: System.getenv("USERNAME")
-                password = project.findProperty("gpr.key") ?: System.getenv("PASSWORD")
-            }
-        }
+
     }
     publications {
         gpr(MavenPublication) {
